--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,72 @@
-APScheduler==3.10.1
-asgiref==3.6.0
-crispy-bootstrap4==2022.1
-dj-database-url==1.2.0
-Django==4.1.7
-django-apscheduler==0.6.2
+asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
+certifi==2023.11.17
+cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
+charset-normalizer==3.3.2
+constantly==23.10.4
+crispy-bootstrap4==2024.1
+cryptography==42.0.7
+daphne==4.1.2
+distlib==0.3.8
+Django==5.0.3
 django-braces==1.15.0
-django-countries==7.5.1
-django-crispy-forms==2.0
-django-model-utils==4.3.1
-django-phonenumber-field==7.0.2
-django-phonenumbers==1.0.1
+django-channels==0.7.0
+django-cors-headers==4.3.1
+django-countries==7.6.1
+django-crispy-forms==2.1
+django-crontab==0.7.1
+django-filter==24.1
+django-model-utils==4.5.1
+django-phonenumber-field==7.3.0
+django-redis==5.4.0
+django-soft-delete==1.0.13
 django-star-ratings==0.9.2
-gunicorn==20.1.0
-phonenumbers==8.13.6
-Pillow==9.4.0
-psycopg2-binary==2.9.5
-pytz==2022.7.1
-pytz-deprecation-shim==0.1.0.post0
-schedule==1.1.0
+djangorestframework==3.15.0
+djangorestframework-simplejwt==5.3.1
+filelock==3.13.1
+hyperlink==21.0.0
+idna==3.7
+incremental==22.10.0
+msgpack==1.0.8
+numpy==1.26.4
+oauthlib==3.2.2
+packaging==24.0
+pandas==2.2.1
+phonenumbers==8.13.34
+phonenumberslite==8.13.34
+pillow==10.2.0
+pipenv==2023.11.15
+platformdirs==4.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycairo==1.26.0
+pycparser==2.22
+PyJWT==2.8.0
+pyOpenSSL==24.1.0
+pytesseract==0.3.10
+python-crontab==3.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+redis==5.0.4
+requests==2.32.3
+requests-oauthlib==2.0.0
+rest-framework-simplejwt==0.0.2
+service-identity==24.1.0
+setuptools==69.0.3
 six==1.16.0
-sqlparse==0.4.3
+sqlparse==0.4.4
 swapper==1.3.0
-typing_extensions==4.5.0
-tzdata==2022.7
-tzlocal==4.3
-whitenoise==6.4.0
+Twisted==24.3.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+virtualenv==20.25.0
+whitenoise==6.6.0
+zope.interface==6.4.post2
